Grey colour scheme: Offset the separator image in actor view to prevent it from overlapping the checkbox.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/trunk@949507 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style-wp-grey.css
+++ b/css/style-wp-grey.css
@@ -88,6 +88,11 @@ a.ws_edit_link:hover {
 	background: #999 url("../images/menu-arrows.png") no-repeat 4px 8px;
 }
 
+/* Offset the separator image in actor view to prevent it from overlapping the checkbox.  */
+.ws_is_actor_view  .ws_menu_separator .ws_item_head {
+	background-position: 25px 8px;
+}
+
 /**
  * Active item
  */
